--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Mar 17 12:30:33 MSK 2016
-sdk.dir=C\:\\Users\\agrebennicov\\AppData\\Local\\Android\\sdk
+#Thu Mar 17 14:06:12 MSK 2016
+ndk.dir=C\:\\Users\\icroitor\\AppData\\Local\\Android\\sdk\\ndk-bundle
+sdk.dir=C\:\\Users\\icroitor\\AppData\\Local\\Android\\sdk
