--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+/app/app.iml
+/DemoProject.iml
 #built application files
 *.apk
 *.ap_
@@ -18,6 +20,7 @@ local.properties
 # Windows thumbnail db
 Thumbs.db
 
+/local.properties
 # OSX files
 .DS_Store
 
