--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
         <activity
             android:name=".activities.LoginActivity"
             android:theme="@style/AppTheme"/>
+
+        <activity
+            android:name=".activities.SettingsActivity"
+            android:theme="@style/AppTheme"/>
         <service android:name=".SaveUserToDBService" />
     </application>
 
