--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 23
@@ -32,4 +33,7 @@ dependencies {
     compile 'com.roughike:bottom-bar:1.2.3'
     compile 'com.makeramen:roundedimageview:2.2.1'
     compile 'com.jakewharton:butterknife:7.0.1'
+    apt 'com.google.dagger:dagger-compiler:2.1'
+    compile 'com.google.dagger:dagger:2.1'
+    provided 'javax.annotation:jsr250-api:1.0'
 }
