--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     provided 'javax.annotation:jsr250-api:1.0'
     compile 'io.reactivex:rxjava:1.1.3'
     compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'com.jaredrummler:fastscroll-recyclerview:1.0.1'
 }
